--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
